2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: mark updates limited to /po/ files as
	unimportant as it is unlikely they would break the build.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css: color up buildbot exceptions and
	running step.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: added support for the
	content-transfer-encoding header as it is used in some emails; also
	fixed discovery of last line in translator messages.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py: fixed slave header tooltip
	to report all current builds, not just the first one.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css, buildbot/template.html,
	jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/waterfall.py: cleaned and improved module
	waterfall pages.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/feeds.py,
	jhbuild/buildbot/status/web/waterfall.py: waterfall customisation to
	only display changes related to the given module; moved waterfall code
	in its own module; renamed feeds module from feeder to feeds.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/master.cfg, jhbuild/config.py, jhbuild/defaults.jhbuildrc:
	new jhbuildbot_svn_commits_box for build master to give the path to
	a Maildir box with messages from svn-commits-list; also removed
	unrelated explanations from buildbot master.cfg.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: added pyobject as a
	suggested dependency of dbus-python, as it is required for its test
	suite.

2008-08-15  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/main.py,
	* jhbuild/commands/bot.py: Allow changing the .jhbuildrc path by
	setting the JHBUILDRC environment variable.

2008-08-15  John Carr  <john.carr@unrouted.co.uk>