@@ -321,3 +321,13 @@ tr.totals td {
     text-align: center;
     font-weight: bold;
 }
+
+div.changeset ul {
+	margin-left: 0em;
+	padding-left: 0em;
+	list-style: none;
+}
+
+div.changeset ul ul {
+	padding-left: 1em;
+}
