@@ -1,3 +1,10 @@
+2008-08-17  Frederic Peters  <fpeters@0d.be>
+
+	* buildbot/public_html/lgo.css,
+	jhbuild/buildbot/status/web/__init__.py,
+	jhbuild/buildbot/status/web/changes.py: custom buildbot changes pages,
+	linking to GNOME ViewVC.
+
 2008-08-16  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/buildbot/scheduler.py: mark updates limited to /po/ files as
